--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "cartalyst/sentinel": "2.0.*",
         "fideloper/proxy": "~3.3",
         "gloudemans/shoppingcart": "^2.5",
+        "htmlmin/htmlmin": "^5.7",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0"
     },
